# gesture-control-system

./: .gitignore  README.md  Untitled20.ipynb  Updated_demo3_live_inference.py  Updated_final_inference.py  Updated_finger_inference_instant.py  dataset_collector.py  demo3_live_inference.py  finger_data_collector.py  fingers_inference.py  gesture_classes.npy  hackathon_balanced_dataset.csv  live_emg_logger.py  live_rf_inference.py  live_xgboost_inference.py  nadicare_classes_finger.npy  nadicare_classes_xgb.npy  prediction_code.py  pyproject.toml  user_profiles.pkl  visual_demo3_inference.py  visual_fingers_inference.py
before/: nadicare_classes_xgb.npy
content/: guru_training_dataset.csv  harsha_training_dataset.csv  keerthana_training_dataset.csv
