[project]
name = "gesture-control-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "joblib>=1.5.3",
    "nidaqmx>=1.4.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "tensorflow>=2.21.0",
    "xgboost>=3.2.0",
]
